Add goreleaser workflow

--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -47,3 +47,8 @@ release:
     ---
 
     Released by [GoReleaser](https://github.com/goreleaser/goreleaser).
+
+
+nfpms:
+  - formats:
+      - deb
